Increase version number, move side-menu-add-list-button 15px up and ensure side-menu-list-container scrolls when overflowing

--- a/styles/style.css
+++ b/styles/style.css
@@ -185,10 +185,12 @@ input[value="dark"]:checked~.work-area {
 
 .side-menu-list-container {
 	padding: 0px;
+	overflow-y: auto;
 }
 
 .side-menu-list {
 	padding: 0;
+	overflow-y: auto;
 }
 
 .side-menu-list>.list-group-item {
@@ -232,7 +234,7 @@ input[value="dark"]:checked~div .side-menu-list>.list-group-item.selected {
 .list {
 	padding: 10px;
 	height: 90%;
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 
 .list-title {
@@ -270,6 +272,13 @@ input[value="dark"]:checked~div .list>.list-group-item {
 	background-origin: border-box;
 	position: absolute;
 	right: 20px;
+}
+
+.privacy-policy {
+	bottom: 30px;
+	left: 20px;
+	font-size: 10px;
+	position: absolute;
 }
 
 /* Scrollbar */
@@ -379,6 +388,11 @@ input[type="checkbox"]:checked~span.checkbox-label {
 	height: 50px;
 	display: flex;
 	border-radius: 50px;
+}
+
+#side-menu-list-add-button {
+	position: relative;
+	top: -15px;
 }
 
 .list-add-input {
